--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  easy_localization: ^3.0.7
   flutter_v2ray:
     path: local_packages/flutter_v2ray
   http: ^1.2.0
@@ -48,7 +51,7 @@ dependencies:
   lottie: ^2.7.0
   flutter_animate: ^4.5.0
   cached_network_image: ^3.3.1
-  intl: ^0.18.1
+  intl: ^0.20.2
   webview_flutter: ^4.13.0
   file_picker: ^10.3.2
   permission_handler: ^12.0.1
@@ -79,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/languages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
