--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          # flutter-version: '3.32.8'
+          flutter-version: '3.32.8'
           channel: 'stable'
 
       - name: Get dependencies
