--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -27,7 +27,6 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          # flutter-version: '3.32.8'
           channel: 'stable'
 
       - name: Create keystore properties file
@@ -35,13 +34,13 @@ jobs:
           echo storePassword=${{ secrets.KEY_STORE_PASSWORD }} > android/key.properties
           echo keyPassword=${{ secrets.KEY_PASSWORD }} >> android/key.properties
           echo keyAlias=${{ secrets.KEY_ALIAS }} >> android/key.properties
-          echo storeFile=keystore.jks >> android/key.properties
+          echo storeFile=app/keystore.jks >> android/key.properties
         shell: bash
 
       - name: Decode Keystore
         run: |
           $bytes = [System.Convert]::FromBase64String("${{ secrets.KEY_STORE }}")
-          [IO.File]::WriteAllBytes("keystore.jks", $bytes)
+          [IO.File]::WriteAllBytes("android/app/keystore.jks", $bytes)
         shell: powershell
 
       - name: Get dependencies
