--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dev_dependencies:
 # Flutter Launcher Icons Configuration
 flutter_launcher_icons:
   android: true
-  ios: false # Disabled iOS to prevent missing file errors
+  ios: true
   image_path: "assets/images/app_icon.png"
   min_sdk_android: 21
   adaptive_icon_background: "#1a2332"
